Redo React project

--- a/front-end-react/src/App.css
+++ b/front-end-react/src/App.css
@@ -1,6 +1,7 @@
-.App {
+@import '~antd/dist/antd.css';
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
